# sigmond

./: .gitignore  .gitmodules  README.md  ensembles.xml  install_dependencies.sh  pyproject.toml  setup.py
doc/: sigmond_user_guide.tex
grace_np/: config.h
lib/: sigmondiolib.inc
scripts/: operators.py  run_sigmond.py  sigmondInput.py
source/analysis/: bootstrapper.cc  bootstrapper.h  histogram.h  matrix.cc  matrix.h  mc_estimate.cc  mc_estimate.h  mcobs_handler.cc  mcobs_handler.h  sampling_info.cc  sampling_info.h
source/batch/: sigmond_batch.cc  user_interface.cc
source/data_handling/: Endian.h  array.h  bins_handler.h  bins_info.cc  bins_info.h  byte_handler.cc  corr_data_handler.cc  corr_data_handler.h  data_handler.h  data_io_handler.h  ensemble_info.cc  ensemble_info.h  ensembles.xml  filelist_info.cc  filelist_info.h  io_handler.cc  io_handler.h  io_handler_fstream.cc  io_handler_fstream.h  io_handler_hdf5.cc  io_handler_hdf5.h  io_map.h  io_map_base.h  io_map_fstream.h  io_map_hdf5.h  laph_data_io_handler.h  obs_get_handler.cc  obs_get_handler.h  qdp_byteorder.cc  qdp_crc32.cc  reweightings_handler.cc  reweightings_handler.h  samplings_handler.h  sigmond_convert.cc  sigmond_get.cc  sigmond_query.cc  vev_data_handler.cc  vev_data_handler.h
source/fitting/: chisq_3ptcorr.cc  chisq_3ptcorr.h  chisq_anisotropy.cc  chisq_anisotropy.h  chisq_base.cc  chisq_base.h  chisq_corrintratio.h  chisq_disp.cc  chisq_disp.h  chisq_fit.cc  chisq_fit.h  chisq_logtcorr.cc  chisq_logtcorr.h  chisq_tcorr.cc  chisq_tcorr.h  minimizer.cc  minimizer.h  minpack.cc  minpack.h  model_3ptcorr.cc  model_3ptcorr.h  model_disp.cc  model_disp.h  model_logtcorr.cc  model_logtcorr.h  model_tcorr.cc  model_tcorr.h  nl2sol.cc  prior.cc  prior.h  vec_utils.h
source/gui/: sigmond.cc  userinterface_gui.h
source/hamiltonian/: hamiltonian.cc  hamiltonian.h  hamiltonian_fcn.cc  hamiltonian_fcn.h
source/observables/: basic_laph_operator_info.cc  basic_laph_operator_info.h  correlator_info.cc  correlator_info.h  correlator_matrix_info.cc  correlator_matrix_info.h  diag_corr_set.cc  diag_corr_set.h  encoder.cc  gen_irrep_operator_info.cc  gen_irrep_operator_info.h  mcobs_info.cc  mcobs_info.h  momenta.cc  momenta.h  operator_info.cc  operator_info.h
source/plotting/: create_plots.cc  create_plots.h  grace_plot.cc  grace_plot.h  plot_info.cc  plot_info.h
source/pysigmond/: pysigmond.cc
source/python_binding/: sigmond_bind.cc  tester.cc
source/tasks/: args_handler.h  log_helper.h  pivoter.h  rolling_pivot.cc  rolling_pivot.h  scalar_defs.h  sigmond.cc  single_pivot.cc  single_pivot.h  stopwatch.cc  task_average_momentum.cc  task_check.cc  task_fit.cc  task_get_from_pivot.cc  task_gevp_check.cc  task_hamiltonian.cc  task_handler.cc  task_handler.h  task_obsfunc.cc  task_pivot.cc  task_plot.cc  task_print.cc  task_rebin.cc  task_rotate_corrs.cc  task_utils.cc  task_utils.h  task_visualize.cc  xml_handler.cc  xml_handler.h
source/testing/: clsweights.cc  file_checker.mpl  run_tests.cc  test_args_handler.cc  test_bins_info.cc  test_bootstrap.cc  test_chisq.cc  test_corr_estimates.cc  test_corr_handler.cc  test_correlator_info.cc  test_data_getput.cc  test_graceplot.cc  test_matrix.cc  test_mc_data_handler.cc  test_mcobs_handler.cc  test_mcobs_handler.h  test_mcobs_info.cc  test_multicompare.cc  test_obs_get_handler.cc  test_obs_get_handler.h  test_operator_info.cc  test_reorder.cc  test_rotate_corr.cc  test_sampling_info.cc  test_task_handler.cc  test_tcorr.cc  test_vev_handler.cc  test_xml_handler.cc  tester.cc  tester10.cc  tester11.cc  tester12.cc  tester13.cc  tester14.cc  tester15.cc  tester16.cc  tester18.cc  tester19.cc  tester2.cc  tester2.mpl  (+11 more)
source/testing/inputs/: input_args.xml  input_bins_getput.xml  input_bins_info.xml  input_chisq.xml  input_corr_estimates.xml  input_gamma.xml  input_graceplot.xml  input_matrix.xml  input_mcdatahandler.xml  input_mcobs_handler2.xml  input_mcobs_handlerIO.xml  input_mcobs_handler_fake.xml  input_mcobs_info.xml  input_mom_ave.xml  (+21 more)
src/sigmond/: ensembles.xml
src/sigmond/source/: CMakeLists.txt  Findpybind11.cmake  pybind11-config.cmake
src/sigmond/source/analysis/: CMakeLists.txt  bootstrapper.h  histogram.cc  matrix.cc  matrix.h  mc_estimate.h  mcobs_handler.cc  mcobs_handler.h  sampling_info.cc
src/sigmond/source/data_handling/: CMakeLists.txt  bins_info.cc  bins_info.h  byte_handler.cc  byte_handler.h  corr_data_handler.cc  corr_data_handler.h  data_io_handler.h  ensemble_info.cc  ensemble_info.h  filelist_info.cc  filelist_info.h  io_handler_fstream.cc  io_handler_fstream.h  io_handler_hdf5.h  io_map.h  obs_get_handler.cc  obs_get_handler.h  samplings_handler.h  sigmond_convert.cc  sigmond_query.cc  vev_data_handler.cc  vev_data_handler.h
src/sigmond/source/fitting/: CMakeLists.txt  chisq_anisotropy.cc  chisq_anisotropy.h  chisq_disp.cc  chisq_disp.h  chisq_fit.h  chisq_logtcorr.h  chisq_tcorr.cc  lmder.cc  minimizer.h  model_logtcorr.cc  model_logtcorr.h  model_tcorr.cc  model_tcorr.h  prior.h
src/sigmond/source/observables/: CMakeLists.txt  basic_laph_operator_info.cc  basic_laph_operator_info.h  correlator_matrix_info.cc  diag_corr_set.cc  encoder.h  gen_irrep_operator_info.h  mcobs_info.cc  mcobs_info.h  momenta.cc  operator_info.cc
src/sigmond/source/plotting/: CMakeLists.txt  create_plots.h  grace_plot.cc  grace_plot.h
src/sigmond/source/pysigmond/: CMakeLists.txt  pysigmond.cc
src/sigmond/source/tasks/: CMakeLists.txt  args_handler.h  log_helper.h  multi_compare.h  pivoter.h  scalar_defs.cc  scalar_defs.h  sigmond.cc  single_pivot.cc  single_pivot.h  stopwatch.h  task_check.cc  task_fit.cc  task_handler.cc  task_obsfunc.cc  task_plot.cc  task_utils.cc  task_utils.h  xml_handler.cc  xml_handler.h
testing/inputs/: input_avgmom_plot.xml  input_bins_info.xml  input_chisq.xml~  input_corr_handler.xml  input_correlator_info.xml  input_corrmat_info.xml  input_fit_32_860_pion_du_meson_PSQ0_jack.xml  input_obsfunc.xml  input_pivot_corr.xml  input_rotate_corr.xml  input_samplings_getput.xml  input_sigmond10.xml  input_sigmond2.xml
(+17 files in other folders)
